--- a/app/globals.css
+++ b/app/globals.css
@@ -16,7 +16,30 @@
   }
 }
 
+*, *::before, *::after {
+  box-sizing: border-box;
+}
+
+* {
+  margin: 0;
+}
+
+html, body {
+  height: 100%;
+}
+
+
+p, h1, h2, h3, h4, h5, h6 {
+  overflow-wrap: break-word;
+}
+
+#root, #__next {
+  isolation: isolate;
+}
+
 body {
+  line-height: 1.5;
+  -webkit-font-smoothing: antialiased;
   color: rgb(var(--foreground-rgb));
   background: linear-gradient(
       to bottom,
